Fixed word-wrapping in <pre> cf. #49

--- a/forum/static/css/reset.css
+++ b/forum/static/css/reset.css
@@ -184,8 +184,6 @@ samp {
  */
 pre {
     white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
 }
 
 /*
